plugins {
    id 'java'
    id 'war'
    id 'org.springframework.boot' version '3.4.1'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.ntt' /*가상 팀명 NTT*/
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

//보안 적용해서 프로그램 시작(회원가입->로그인->개발프로그램)
//프로젝트을 작성하고 나중에 보안을 적용(개발프로그램->회원가입->로그인->회원관련 프로그램)
//필요한 종속성 있으시면 '권봄'에게 말씀해주시면 추가해드리겠습니다!!
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-jdbc'

    //시큐리티
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'org.springframework.boot:spring-boot-starter-web'

    //modelmapper
    implementation 'org.modelmapper:modelmapper:3.2.1'

    //API 명세서 생성
    implementation "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.0.2"

    //레이아웃
    implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'

    // 이메일 전송
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    annotationProcessor 'org.projectlombok:lombok'

    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'

    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'

    //H2데이터베이스
    runtimeOnly 'com.h2database:h2'

    //MariaDB데이터베이스
    runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //이미지 썸네일
    implementation group: 'net.coobird', name: 'thumbnailator', version: '0.4.20'


}

tasks.named('test') {
    useJUnitPlatform()
}
